--- a/package.json
+++ b/package.json
@@ -2,17 +2,25 @@
   "name": "hms---backend",
   "version": "1.0.0",
   "description": "Hospital Management System API",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "body-parser": "^1.20.3",
+    "compression": "^1.7.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "hms---backend": "file:",
     "knex": "^3.1.0",
-    "mysql2": "^3.11.4"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.5",
+    "xss-clean": "^0.1.4"
   }
 }
